package com.example.fish;

public abstract class AbstractFish {

    public abstract String getName();

    public abstract String getSciencename();

    public abstract String getType();

    public abstract String getLocationLabel();

    public abstract String getWeight();

    public abstract String getLength();

    public abstract String getStatus();
}
